--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,31 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #393939;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.1), 0 1px 4px rgba(0, 0, 0, 0.1), 0 2px 8px rgba(0, 0, 0, 0.1);
+  opacity: 1;
+}
+
+.quizHead{
+  display: inline;
+}
+
+.darkMode {
+  background-color: #2d2d2d;
+  color: #eee;
+  opacity: 0.87;
+}
+
+.toggle {
+  display: inline;
+  margin-left: 70%;
+}
+
+button {
+  box-shadow: 5px 2px 4px rgba(0, 0, 0, 0.5);
 }
